src/cparser.output
Nonterminals useless in grammar

   TYPEDEF_NAME


Terminals unused in grammar

   T_FLOAT_CONST
   T_INT_CONST
   T_CHAR_CONST
   T_HASH
   T_HASH_HASH


语法中的规则无效

  210 TYPEDEF_NAME: T_IDENTIFIER


状态 115 conflicts: 5 reduce/reduce
状态 116 conflicts: 5 reduce/reduce
状态 121 conflicts: 5 reduce/reduce
状态 128 conflicts: 5 reduce/reduce
状态 133 conflicts: 1 reduce/reduce
状态 357 conflicts: 1 shift/reduce


语法

    0 $accept: ROOT $end

    1 ROOT: TRANSLATION_UNIT

    2 PRIMARY_EXPRESSION: T_IDENTIFIER
    3                   | T_FLOAT
    4                   | T_DOUBLE
    5                   | T_INT
    6                   | T_CHAR
    7                   | T_STRING
    8                   | T_L_ROUND_BRACKET EXPRESSION T_R_ROUND_BRACKET

    9 POSTFIX_EXPRESSION: PRIMARY_EXPRESSION
   10                   | POSTFIX_EXPRESSION T_L_SQUARE_BRACKET EXPRESSION T_R_SQUARE_BRACKET
   11                   | POSTFIX_EXPRESSION T_DOT T_IDENTIFIER
   12                   | POSTFIX_EXPRESSION T_L_ROUND_BRACKET ARGUMENT_EXPRESSION_LIST T_R_ROUND_BRACKET
   13                   | POSTFIX_EXPRESSION T_L_ROUND_BRACKET T_R_ROUND_BRACKET
   14                   | POSTFIX_EXPRESSION T_POINT_TO T_IDENTIFIER
   15                   | POSTFIX_EXPRESSION T_PLUS_PLUS
   16                   | POSTFIX_EXPRESSION T_MINUS_MINUS

   17 ARGUMENT_EXPRESSION_LIST: ASSIGNMENT_EXPRESSION
   18                         | ARGUMENT_EXPRESSION_LIST T_COMMA ASSIGNMENT_EXPRESSION

   19 UNARY_EXPRESSION: POSTFIX_EXPRESSION
   20                 | T_PLUS_PLUS UNARY_EXPRESSION
   21                 | T_MINUS_MINUS UNARY_EXPRESSION
   22                 | T_PLUS CAST_EXPRESSION
   23                 | T_MINUS CAST_EXPRESSION
   24                 | T_TIMES CAST_EXPRESSION
   25                 | T_TILDE CAST_EXPRESSION
   26                 | T_EXCLAMATION CAST_EXPRESSION
   27                 | T_BITWISE_AND CAST_EXPRESSION
   28                 | T_SIZEOF UNARY_EXPRESSION
   29                 | T_SIZEOF T_L_ROUND_BRACKET TYPE_NAME T_R_ROUND_BRACKET

   30 CAST_EXPRESSION: UNARY_EXPRESSION
   31                | T_L_ROUND_BRACKET TYPE_NAME T_R_ROUND_BRACKET CAST_EXPRESSION

   32 MULTIPLICATIVE_EXPRESSION: CAST_EXPRESSION
   33                          | MULTIPLICATIVE_EXPRESSION T_TIMES CAST_EXPRESSION
   34                          | MULTIPLICATIVE_EXPRESSION T_DIVIDE CAST_EXPRESSION
   35                          | MULTIPLICATIVE_EXPRESSION T_PERCENTAGE CAST_EXPRESSION

   36 ADDITIVE_EXPRESSION: MULTIPLICATIVE_EXPRESSION
   37                    | ADDITIVE_EXPRESSION T_PLUS MULTIPLICATIVE_EXPRESSION
   38                    | ADDITIVE_EXPRESSION T_MINUS MULTIPLICATIVE_EXPRESSION

   39 SHIFT_EXPRESSION: ADDITIVE_EXPRESSION
   40                 | SHIFT_EXPRESSION T_SMALLER_SMALLER ADDITIVE_EXPRESSION
   41                 | SHIFT_EXPRESSION T_BIGGER_BIGGER ADDITIVE_EXPRESSION

   42 RELATIONAL_EXPRESSION: SHIFT_EXPRESSION
   43                      | RELATIONAL_EXPRESSION T_SMALLER SHIFT_EXPRESSION
   44                      | RELATIONAL_EXPRESSION T_BIGGER SHIFT_EXPRESSION
   45                      | RELATIONAL_EXPRESSION T_SMALLER_EQUAL SHIFT_EXPRESSION
   46                      | RELATIONAL_EXPRESSION T_BIGGER_EQUAL SHIFT_EXPRESSION

   47 EQUALITY_EXPRESSION: RELATIONAL_EXPRESSION
   48                    | EQUALITY_EXPRESSION T_BOOL_EQUAL RELATIONAL_EXPRESSION
   49                    | EQUALITY_EXPRESSION T_NOT_EQUAL RELATIONAL_EXPRESSION

   50 AND_EXPRESSION: EQUALITY_EXPRESSION
   51               | AND_EXPRESSION T_BITWISE_AND EQUALITY_EXPRESSION

   52 EXCLUSIVE_OR_EXPRESSION: AND_EXPRESSION
   53                        | EXCLUSIVE_OR_EXPRESSION T_BITWISE_XOR AND_EXPRESSION

   54 INCLUSIVE_OR_EXPRESSION: EXCLUSIVE_OR_EXPRESSION
   55                        | INCLUSIVE_OR_EXPRESSION T_BITWISE_OR EXCLUSIVE_OR_EXPRESSION

   56 LOGICAL_AND_EXPRESSION: INCLUSIVE_OR_EXPRESSION
   57                       | LOGICAL_AND_EXPRESSION T_LOGICAL_AND INCLUSIVE_OR_EXPRESSION

   58 LOGICAL_OR_EXPRESSION: LOGICAL_AND_EXPRESSION
   59                      | LOGICAL_OR_EXPRESSION T_LOGICAL_OR LOGICAL_AND_EXPRESSION

   60 CONDITIONAL_EXPRESSION: LOGICAL_OR_EXPRESSION
   61                       | LOGICAL_OR_EXPRESSION T_QUESTION EXPRESSION T_COLON CONDITIONAL_EXPRESSION

   62 ASSIGNMENT_EXPRESSION: CONDITIONAL_EXPRESSION
   63                      | UNARY_EXPRESSION T_EQUAL ASSIGNMENT_EXPRESSION
   64                      | UNARY_EXPRESSION T_AND_EQUAL ASSIGNMENT_EXPRESSION
   65                      | UNARY_EXPRESSION T_XOR_EQUAL ASSIGNMENT_EXPRESSION
   66                      | UNARY_EXPRESSION T_OR_EQUAL ASSIGNMENT_EXPRESSION
   67                      | UNARY_EXPRESSION T_PERCENTAGE_EQUAL ASSIGNMENT_EXPRESSION
   68                      | UNARY_EXPRESSION T_LSHIFT_EQUAL ASSIGNMENT_EXPRESSION
   69                      | UNARY_EXPRESSION T_RSHIFT_EQUAL ASSIGNMENT_EXPRESSION
   70                      | UNARY_EXPRESSION T_PLUS_EQUAL ASSIGNMENT_EXPRESSION
   71                      | UNARY_EXPRESSION T_MINUS_EQUAL ASSIGNMENT_EXPRESSION
   72                      | UNARY_EXPRESSION T_TIMES_EQUAL ASSIGNMENT_EXPRESSION
   73                      | UNARY_EXPRESSION T_DIVIDE_EQUAL ASSIGNMENT_EXPRESSION

   74 EXPRESSION: ASSIGNMENT_EXPRESSION
   75           | EXPRESSION T_COMMA ASSIGNMENT_EXPRESSION

   76 CONSTANT_EXPRESSION: CONDITIONAL_EXPRESSION

   77 STORAGE_CLASS_SPECIFIER: T_TYPEDEF
   78                        | T_EXTERN
   79                        | T_STATIC
   80                        | T_AUTO
   81                        | T_REGISTER

   82 DECLARATION: DECLARATION_SPECIFIERS T_SEMICOLON
   83            | DECLARATION_SPECIFIERS INIT_DECLARATOR_LIST T_SEMICOLON

   84 DECLARATION_SPECIFIERS: STORAGE_CLASS_SPECIFIER
   85                       | STORAGE_CLASS_SPECIFIER DECLARATION_SPECIFIERS
   86                       | TYPE_SPECIFIER
   87                       | TYPE_SPECIFIER DECLARATION_SPECIFIERS
   88                       | TYPE_QUALIFIER
   89                       | TYPE_QUALIFIER DECLARATION_SPECIFIERS

   90 INIT_DECLARATOR_LIST: INIT_DECLARATOR
   91                     | INIT_DECLARATOR_LIST T_COMMA INIT_DECLARATOR

   92 INIT_DECLARATOR: DECLARATOR
   93                | DECLARATOR T_EQUAL INITIALIZER
   94                | DECLARATOR T_L_CURLY_BRACKET INITIALIZER_LIST T_R_CURLY_BRACKET

   95 TYPE_SPECIFIER: T_VOID
   96               | T_CHAR
   97               | T_SHORT
   98               | T_INT
   99               | T_LONG
  100               | T_FLOAT
  101               | T_DOUBLE
  102               | T_SIGNED
  103               | T_UNSIGNED
  104               | STRUCT_OR_UNION_SPECIFIER
  105               | ENUM_SPECIFIER

  106 STRUCT_OR_UNION_SPECIFIER: STRUCT_OR_UNION T_IDENTIFIER
  107                          | STRUCT_OR_UNION T_L_CURLY_BRACKET STRUCT_DECLARATION_LIST T_R_CURLY_BRACKET
  108                          | STRUCT_OR_UNION T_IDENTIFIER T_L_CURLY_BRACKET STRUCT_DECLARATION_LIST T_R_CURLY_BRACKET

  109 STRUCT_OR_UNION: T_STRUCT
  110                | T_UNION

  111 STRUCT_DECLARATION_LIST: STRUCT_DECLARATION
  112                        | STRUCT_DECLARATION_LIST STRUCT_DECLARATION

  113 STRUCT_DECLARATION: SPECIFIER_QUALIFIER_LIST STRUCT_DECLARATOR_LIST T_SEMICOLON

  114 SPECIFIER_QUALIFIER_LIST: TYPE_SPECIFIER SPECIFIER_QUALIFIER_LIST
  115                         | TYPE_SPECIFIER
  116                         | TYPE_QUALIFIER SPECIFIER_QUALIFIER_LIST
  117                         | TYPE_QUALIFIER

  118 STRUCT_DECLARATOR_LIST: STRUCT_DECLARATOR
  119                       | STRUCT_DECLARATOR_LIST T_COMMA STRUCT_DECLARATOR

  120 STRUCT_DECLARATOR: DECLARATOR
  121                  | T_COLON CONSTANT_EXPRESSION
  122                  | DECLARATOR T_COLON CONSTANT_EXPRESSION

  123 ENUM_SPECIFIER: T_ENUM T_IDENTIFIER T_L_CURLY_BRACKET ENUMERATOR_LIST T_R_CURLY_BRACKET
  124               | T_ENUM T_L_CURLY_BRACKET ENUMERATOR_LIST T_R_CURLY_BRACKET
  125               | T_ENUM T_IDENTIFIER

  126 ENUMERATOR_LIST: ENUMERATOR
  127                | ENUMERATOR_LIST T_COMMA ENUMERATOR

  128 ENUMERATOR: T_IDENTIFIER
  129           | T_IDENTIFIER T_EQUAL CONSTANT_EXPRESSION

  130 TYPE_QUALIFIER: T_VOLATILE
  131               | T_CONST

  132 DECLARATOR: DIRECT_DECLARATOR
  133           | POINTER DIRECT_DECLARATOR

  134 DIRECT_DECLARATOR: T_IDENTIFIER
  135                  | T_L_ROUND_BRACKET DECLARATOR T_R_ROUND_BRACKET
  136                  | DIRECT_DECLARATOR T_L_SQUARE_BRACKET T_R_SQUARE_BRACKET
  137                  | DIRECT_DECLARATOR T_L_SQUARE_BRACKET CONSTANT_EXPRESSION T_R_SQUARE_BRACKET
  138                  | DIRECT_DECLARATOR T_L_ROUND_BRACKET PARAMETER_TYPE_LIST T_R_ROUND_BRACKET
  139                  | DIRECT_DECLARATOR T_L_ROUND_BRACKET T_R_ROUND_BRACKET
  140                  | DIRECT_DECLARATOR T_L_ROUND_BRACKET IDENTIFIER_LIST T_R_ROUND_BRACKET

  141 POINTER: T_TIMES
  142        | T_TIMES POINTER
  143        | T_TIMES TYPE_QUALIFIER_LIST
  144        | T_TIMES TYPE_QUALIFIER_LIST POINTER

  145 TYPE_QUALIFIER_LIST: TYPE_QUALIFIER
  146                    | TYPE_QUALIFIER_LIST TYPE_QUALIFIER

  147 PARAMETER_TYPE_LIST: PARAMETER_LIST

  148 PARAMETER_LIST: PARAMETER_DECLARATION
  149               | PARAMETER_LIST T_COMMA PARAMETER_DECLARATION

  150 PARAMETER_DECLARATION: DECLARATION_SPECIFIERS DECLARATOR
  151                      | DECLARATION_SPECIFIERS
  152                      | DECLARATION_SPECIFIERS ABSTRACT_DECLARATOR

  153 IDENTIFIER_LIST: T_IDENTIFIER
  154                | IDENTIFIER_LIST T_COMMA T_IDENTIFIER

  155 TYPE_NAME: SPECIFIER_QUALIFIER_LIST
  156          | SPECIFIER_QUALIFIER_LIST ABSTRACT_DECLARATOR

  157 ABSTRACT_DECLARATOR: POINTER
  158                    | DIRECT_ABSTRACT_DECLARATOR
  159                    | POINTER DIRECT_ABSTRACT_DECLARATOR

  160 DIRECT_ABSTRACT_DECLARATOR: T_L_ROUND_BRACKET ABSTRACT_DECLARATOR T_R_ROUND_BRACKET
  161                           | DIRECT_ABSTRACT_DECLARATOR T_L_SQUARE_BRACKET CONSTANT_EXPRESSION T_R_SQUARE_BRACKET
  162                           | T_L_SQUARE_BRACKET CONSTANT_EXPRESSION T_R_SQUARE_BRACKET
  163                           | T_L_SQUARE_BRACKET T_R_SQUARE_BRACKET
  164                           | DIRECT_ABSTRACT_DECLARATOR T_L_SQUARE_BRACKET T_R_SQUARE_BRACKET
  165                           | DIRECT_ABSTRACT_DECLARATOR T_L_ROUND_BRACKET PARAMETER_TYPE_LIST T_R_ROUND_BRACKET
  166                           | T_L_ROUND_BRACKET PARAMETER_TYPE_LIST T_R_ROUND_BRACKET
  167                           | DIRECT_ABSTRACT_DECLARATOR T_L_ROUND_BRACKET T_R_ROUND_BRACKET
  168                           | T_L_ROUND_BRACKET T_R_ROUND_BRACKET

  169 INITIALIZER: ASSIGNMENT_EXPRESSION
  170            | T_L_CURLY_BRACKET INITIALIZER_LIST T_R_CURLY_BRACKET
  171            | T_L_CURLY_BRACKET INITIALIZER_LIST T_COMMA T_R_CURLY_BRACKET

  172 INITIALIZER_LIST: INITIALIZER
  173                 | INITIALIZER_LIST T_COMMA INITIALIZER

  174 STATEMENT: LABELED_STATEMENT
  175          | COMPOUND_STATEMENT
  176          | EXPRESSION_STATEMENT
  177          | SELECTION_STATEMENT
  178          | ITERATION_STATEMENT
  179          | JUMP_STATEMENT

  180 LABELED_STATEMENT: T_IDENTIFIER T_COLON STATEMENT
  181                  | T_CASE CONSTANT_EXPRESSION T_COLON STATEMENT
  182                  | T_DEFAULT T_COLON STATEMENT

  183 COMPOUND_STATEMENT: T_L_CURLY_BRACKET DECLARATION_LIST STATEMENT_LIST T_R_CURLY_BRACKET
  184                   | T_L_CURLY_BRACKET STATEMENT_LIST T_R_CURLY_BRACKET
  185                   | T_L_CURLY_BRACKET DECLARATION_LIST T_R_CURLY_BRACKET
  186                   | T_L_CURLY_BRACKET T_R_CURLY_BRACKET

  187 DECLARATION_LIST: DECLARATION
  188                 | DECLARATION_LIST DECLARATION

  189 STATEMENT_LIST: STATEMENT
  190               | STATEMENT_LIST STATEMENT

  191 EXPRESSION_STATEMENT: T_SEMICOLON
  192                     | EXPRESSION T_SEMICOLON

  193 SELECTION_STATEMENT: T_IF T_L_ROUND_BRACKET EXPRESSION T_R_ROUND_BRACKET STATEMENT
  194                    | T_IF T_L_ROUND_BRACKET EXPRESSION T_R_ROUND_BRACKET STATEMENT T_ELSE STATEMENT
  195                    | T_SWITCH T_L_ROUND_BRACKET EXPRESSION T_R_ROUND_BRACKET STATEMENT

  196 ITERATION_STATEMENT: T_WHILE T_L_ROUND_BRACKET EXPRESSION T_R_ROUND_BRACKET STATEMENT
  197                    | T_DO STATEMENT T_WHILE T_L_ROUND_BRACKET EXPRESSION T_R_ROUND_BRACKET T_SEMICOLON
  198                    | T_FOR T_L_ROUND_BRACKET EXPRESSION T_SEMICOLON EXPRESSION T_SEMICOLON EXPRESSION T_R_ROUND_BRACKET STATEMENT
  199                    | T_FOR T_L_ROUND_BRACKET EXPRESSION T_SEMICOLON EXPRESSION T_R_ROUND_BRACKET STATEMENT
  200                    | T_FOR T_L_ROUND_BRACKET EXPRESSION T_R_ROUND_BRACKET STATEMENT

  201 JUMP_STATEMENT: T_CONTINUE T_SEMICOLON
  202               | T_BREAK T_SEMICOLON
  203               | T_RETURN EXPRESSION T_SEMICOLON
  204               | T_RETURN T_SEMICOLON

  205 TRANSLATION_UNIT: EXTERNAL_DECLARATION
  206                 | TRANSLATION_UNIT EXTERNAL_DECLARATION

  207 EXTERNAL_DECLARATION: FUNCTION_DEFINITION
  208                     | DECLARATION

  209 FUNCTION_DEFINITION: DECLARATION_SPECIFIERS DECLARATOR COMPOUND_STATEMENT


Terminals, with rules where they appear

$end (0) 0
error (256)
T_AUTO (258) 80
T_DOUBLE (259) 4 101
T_INT (260) 5 98
T_STRUCT (261) 109
T_BREAK (262) 202
T_ELSE (263) 194
T_LONG (264) 99
T_SWITCH (265) 195
T_CASE (266) 181
T_ENUM (267) 123 124 125
T_REGISTER (268) 81
T_TYPEDEF (269) 77
T_EXTERN (270) 78
T_RETURN (271) 203 204
T_FLOAT (272) 3 100
T_SHORT (273) 97
T_UNSIGNED (274) 103
T_CONTINUE (275) 201
T_FOR (276) 198 199 200
T_SIGNED (277) 102
T_VOID (278) 95
T_DEFAULT (279) 182
T_SIZEOF (280) 28 29
T_VOLATILE (281) 130
T_DO (282) 197
T_IF (283) 193 194
T_STATIC (284) 79
T_WHILE (285) 196 197
T_CHAR (286) 6 96
T_EQUAL (287) 63 93 129
T_CONST (288) 131
T_IDENTIFIER (289) 2 11 14 106 108 123 125 128 129 134 153 154 180
T_FLOAT_CONST (290)
T_INT_CONST (291)
T_CHAR_CONST (292)
T_STRING (293) 7
T_PLUS (294) 22 37
T_PLUS_PLUS (295) 15 20
T_PLUS_EQUAL (296) 70
T_MINUS (297) 23 38
T_MINUS_MINUS (298) 16 21
T_MINUS_EQUAL (299) 71
T_TIMES (300) 24 33 141 142 143 144
T_TIMES_EQUAL (301) 72
T_DIVIDE (302) 34
T_DIVIDE_EQUAL (303) 73
T_BOOL_EQUAL (304) 48
T_NOT_EQUAL (305) 49
T_TILDE (306) 25
T_EXCLAMATION (307) 26
T_PERCENTAGE (308) 35
T_HASH (309)
T_HASH_HASH (310)
T_COLON (311) 61 121 122 180 181 182
T_SEMICOLON (312) 82 83 113 191 192 197 198 199 201 202 203 204
T_BITWISE_OR (313) 55
T_LOGICAL_OR (314) 59
T_BITWISE_AND (315) 27 51
T_LOGICAL_AND (316) 57
T_COMMA (317) 18 75 91 119 127 149 154 171 173
T_LSHIFT_EQUAL (318) 68
T_RSHIFT_EQUAL (319) 69
T_L_ROUND_BRACKET (320) 8 12 13 29 31 135 138 139 140 160 165 166 167
    168 193 194 195 196 197 198 199 200
T_R_ROUND_BRACKET (321) 8 12 13 29 31 135 138 139 140 160 165 166 167
    168 193 194 195 196 197 198 199 200
T_L_SQUARE_BRACKET (322) 10 136 137 161 162 163 164
T_R_SQUARE_BRACKET (323) 10 136 137 161 162 163 164
T_L_CURLY_BRACKET (324) 94 107 108 123 124 170 171 183 184 185 186
T_R_CURLY_BRACKET (325) 94 107 108 123 124 170 171 183 184 185 186
T_DOT (326) 11
T_QUESTION (327) 61
T_SMALLER (328) 43
T_SMALLER_SMALLER (329) 40
T_BIGGER (330) 44
T_BIGGER_BIGGER (331) 41
T_SMALLER_EQUAL (332) 45
T_BIGGER_EQUAL (333) 46
T_POINT_TO (334) 14
T_BITWISE_XOR (335) 53
T_AND_EQUAL (336) 64
T_OR_EQUAL (337) 66
T_XOR_EQUAL (338) 65
T_PERCENTAGE_EQUAL (339) 67
T_UNION (340) 110


Nonterminals, with rules where they appear

$accept (86)
    左： 0
ROOT (87)
    左： 1, 右： 0
PRIMARY_EXPRESSION (88)
    左： 2 3 4 5 6 7 8, 右： 9
POSTFIX_EXPRESSION (89)
    左： 9 10 11 12 13 14 15 16, 右： 10 11 12 13 14 15 16 19
ARGUMENT_EXPRESSION_LIST (90)
    左： 17 18, 右： 12 18
UNARY_EXPRESSION (91)
    左： 19 20 21 22 23 24 25 26 27 28 29, 右： 20 21 28 30 63
    64 65 66 67 68 69 70 71 72 73
CAST_EXPRESSION (92)
    左： 30 31, 右： 22 23 24 25 26 27 31 32 33 34 35
MULTIPLICATIVE_EXPRESSION (93)
    左： 32 33 34 35, 右： 33 34 35 36 37 38
ADDITIVE_EXPRESSION (94)
    左： 36 37 38, 右： 37 38 39 40 41
SHIFT_EXPRESSION (95)
    左： 39 40 41, 右： 40 41 42 43 44 45 46
RELATIONAL_EXPRESSION (96)
    左： 42 43 44 45 46, 右： 43 44 45 46 47 48 49
EQUALITY_EXPRESSION (97)
    左： 47 48 49, 右： 48 49 50 51
AND_EXPRESSION (98)
    左： 50 51, 右： 51 52 53
EXCLUSIVE_OR_EXPRESSION (99)
    左： 52 53, 右： 53 54 55
INCLUSIVE_OR_EXPRESSION (100)
    左： 54 55, 右： 55 56 57
LOGICAL_AND_EXPRESSION (101)
    左： 56 57, 右： 57 58 59
LOGICAL_OR_EXPRESSION (102)
    左： 58 59, 右： 59 60 61
CONDITIONAL_EXPRESSION (103)
    左： 60 61, 右： 61 62 76
ASSIGNMENT_EXPRESSION (104)
    左： 62 63 64 65 66 67 68 69 70 71 72 73, 右： 17 18 63 64
    65 66 67 68 69 70 71 72 73 74 75 169
EXPRESSION (105)
    左： 74 75, 右： 8 10 61 75 192 193 194 195 196 197 198 199
    200 203
CONSTANT_EXPRESSION (106)
    左： 76, 右： 121 122 129 137 161 162 181
STORAGE_CLASS_SPECIFIER (107)
    左： 77 78 79 80 81, 右： 84 85
DECLARATION (108)
    左： 82 83, 右： 187 188 208
DECLARATION_SPECIFIERS (109)
    左： 84 85 86 87 88 89, 右： 82 83 85 87 89 150 151 152 209
INIT_DECLARATOR_LIST (110)
    左： 90 91, 右： 83 91
INIT_DECLARATOR (111)
    左： 92 93 94, 右： 90 91
TYPE_SPECIFIER (112)
    左： 95 96 97 98 99 100 101 102 103 104 105, 右： 86 87 114
    115
STRUCT_OR_UNION_SPECIFIER (113)
    左： 106 107 108, 右： 104
STRUCT_OR_UNION (114)
    左： 109 110, 右： 106 107 108
STRUCT_DECLARATION_LIST (115)
    左： 111 112, 右： 107 108 112
STRUCT_DECLARATION (116)
    左： 113, 右： 111 112
SPECIFIER_QUALIFIER_LIST (117)
    左： 114 115 116 117, 右： 113 114 116 155 156
STRUCT_DECLARATOR_LIST (118)
    左： 118 119, 右： 113 119
STRUCT_DECLARATOR (119)
    左： 120 121 122, 右： 118 119
ENUM_SPECIFIER (120)
    左： 123 124 125, 右： 105
ENUMERATOR_LIST (121)
    左： 126 127, 右： 123 124 127
ENUMERATOR (122)
    左： 128 129, 右： 126 127
TYPE_QUALIFIER (123)
    左： 130 131, 右： 88 89 116 117 145 146
DECLARATOR (124)
    左： 132 133, 右： 92 93 94 120 122 135 150 209
DIRECT_DECLARATOR (125)
    左： 134 135 136 137 138 139 140, 右： 132 133 136 137 138
    139 140
POINTER (126)
    左： 141 142 143 144, 右： 133 142 144 157 159
TYPE_QUALIFIER_LIST (127)
    左： 145 146, 右： 143 144 146
PARAMETER_TYPE_LIST (128)
    左： 147, 右： 138 165 166
PARAMETER_LIST (129)
    左： 148 149, 右： 147 149
PARAMETER_DECLARATION (130)
    左： 150 151 152, 右： 148 149
IDENTIFIER_LIST (131)
    左： 153 154, 右： 140 154
TYPE_NAME (132)
    左： 155 156, 右： 29 31
ABSTRACT_DECLARATOR (133)
    左： 157 158 159, 右： 152 156 160
DIRECT_ABSTRACT_DECLARATOR (134)
    左： 160 161 162 163 164 165 166 167 168, 右： 158 159 161
    164 165 167
INITIALIZER (135)
    左： 169 170 171, 右： 93 172 173
INITIALIZER_LIST (136)
    左： 172 173, 右： 94 170 171 173
STATEMENT (137)
    左： 174 175 176 177 178 179, 右： 180 181 182 189 190 193
    194 195 196 197 198 199 200
LABELED_STATEMENT (138)
    左： 180 181 182, 右： 174
COMPOUND_STATEMENT (139)
    左： 183 184 185 186, 右： 175 209
DECLARATION_LIST (140)
    左： 187 188, 右： 183 185 188
STATEMENT_LIST (141)
    左： 189 190, 右： 183 184 190
EXPRESSION_STATEMENT (142)
    左： 191 192, 右： 176
SELECTION_STATEMENT (143)
    左： 193 194 195, 右： 177
ITERATION_STATEMENT (144)
    左： 196 197 198 199 200, 右： 178
JUMP_STATEMENT (145)
    左： 201 202 203 204, 右： 179
TRANSLATION_UNIT (146)
    左： 205 206, 右： 1 206
EXTERNAL_DECLARATION (147)
    左： 207 208, 右： 205 206
FUNCTION_DEFINITION (148)
    左： 209, 右： 207


State 0

    0 $accept: . ROOT $end

    T_AUTO      shift, and go to state 1
    T_DOUBLE    shift, and go to state 2
    T_INT       shift, and go to state 3
    T_STRUCT    shift, and go to state 4
    T_LONG      shift, and go to state 5
    T_ENUM      shift, and go to state 6
    T_REGISTER  shift, and go to state 7
    T_TYPEDEF   shift, and go to state 8
    T_EXTERN    shift, and go to state 9
    T_FLOAT     shift, and go to state 10
    T_SHORT     shift, and go to state 11
    T_UNSIGNED  shift, and go to state 12
    T_SIGNED    shift, and go to state 13
    T_VOID      shift, and go to state 14
    T_VOLATILE  shift, and go to state 15
    T_STATIC    shift, and go to state 16
    T_CHAR      shift, and go to state 17
    T_CONST     shift, and go to state 18
    T_UNION     shift, and go to state 19

    ROOT                       转到状态 20
    STORAGE_CLASS_SPECIFIER    转到状态 21
    DECLARATION                转到状态 22
    DECLARATION_SPECIFIERS     转到状态 23
    TYPE_SPECIFIER             转到状态 24
    STRUCT_OR_UNION_SPECIFIER  转到状态 25
    STRUCT_OR_UNION            转到状态 26
    ENUM_SPECIFIER             转到状态 27
    TYPE_QUALIFIER             转到状态 28
    TRANSLATION_UNIT           转到状态 29
    EXTERNAL_DECLARATION       转到状态 30
    FUNCTION_DEFINITION        转到状态 31


State 1

   80 STORAGE_CLASS_SPECIFIER: T_AUTO .

    $default  reduce using rule 80 (STORAGE_CLASS_SPECIFIER)


State 2

  101 TYPE_SPECIFIER: T_DOUBLE .

    $default  reduce using rule 101 (TYPE_SPECIFIER)


State 3

   98 TYPE_SPECIFIER: T_INT .

    $default  reduce using rule 98 (TYPE_SPECIFIER)


State 4

  109 STRUCT_OR_UNION: T_STRUCT .

    $default  reduce using rule 109 (STRUCT_OR_UNION)


State 5

   99 TYPE_SPECIFIER: T_LONG .

    $default  reduce using rule 99 (TYPE_SPECIFIER)


State 6

  123 ENUM_SPECIFIER: T_ENUM . T_IDENTIFIER T_L_CURLY_BRACKET ENUMERATOR_LIST T_R_CURLY_BRACKET
  124               | T_ENUM . T_L_CURLY_BRACKET ENUMERATOR_LIST T_R_CURLY_BRACKET
  125               | T_ENUM . T_IDENTIFIER

    T_IDENTIFIER       shift, and go to state 32
    T_L_CURLY_BRACKET  shift, and go to state 33


State 7

   81 STORAGE_CLASS_SPECIFIER: T_REGISTER .

    $default  reduce using rule 81 (STORAGE_CLASS_SPECIFIER)


State 8

   77 STORAGE_CLASS_SPECIFIER: T_TYPEDEF .

    $default  reduce using rule 77 (STORAGE_CLASS_SPECIFIER)


State 9

   78 STORAGE_CLASS_SPECIFIER: T_EXTERN .

    $default  reduce using rule 78 (STORAGE_CLASS_SPECIFIER)


State 10

  100 TYPE_SPECIFIER: T_FLOAT .

    $default  reduce using rule 100 (TYPE_SPECIFIER)


State 11

   97 TYPE_SPECIFIER: T_SHORT .

    $default  reduce using rule 97 (TYPE_SPECIFIER)


State 12

  103 TYPE_SPECIFIER: T_UNSIGNED .

    $default  reduce using rule 103 (TYPE_SPECIFIER)


State 13

  102 TYPE_SPECIFIER: T_SIGNED .

    $default  reduce using rule 102 (TYPE_SPECIFIER)


State 14

   95 TYPE_SPECIFIER: T_VOID .

    $default  reduce using rule 95 (TYPE_SPECIFIER)


State 15

  130 TYPE_QUALIFIER: T_VOLATILE .

    $default  reduce using rule 130 (TYPE_QUALIFIER)


State 16

   79 STORAGE_CLASS_SPECIFIER: T_STATIC .

    $default  reduce using rule 79 (STORAGE_CLASS_SPECIFIER)


State 17

   96 TYPE_SPECIFIER: T_CHAR .

    $default  reduce using rule 96 (TYPE_SPECIFIER)


State 18

  131 TYPE_QUALIFIER: T_CONST .

    $default  reduce using rule 131 (TYPE_QUALIFIER)


State 19

  110 STRUCT_OR_UNION: T_UNION .

    $default  reduce using rule 110 (STRUCT_OR_UNION)


State 20

    0 $accept: ROOT . $end

    $end  shift, and go to state 34


State 21

   84 DECLARATION_SPECIFIERS: STORAGE_CLASS_SPECIFIER .
   85                       | STORAGE_CLASS_SPECIFIER . DECLARATION_SPECIFIERS

    T_AUTO      shift, and go to state 1
    T_DOUBLE    shift, and go to state 2
    T_INT       shift, and go to state 3
    T_STRUCT    shift, and go to state 4
    T_LONG      shift, and go to state 5
    T_ENUM      shift, and go to state 6
    T_REGISTER  shift, and go to state 7
    T_TYPEDEF   shift, and go to state 8
    T_EXTERN    shift, and go to state 9
    T_FLOAT     shift, and go to state 10
    T_SHORT     shift, and go to state 11
    T_UNSIGNED  shift, and go to state 12
    T_SIGNED    shift, and go to state 13
    T_VOID      shift, and go to state 14
    T_VOLATILE  shift, and go to state 15
    T_STATIC    shift, and go to state 16
    T_CHAR      shift, and go to state 17
    T_CONST     shift, and go to state 18
    T_UNION     shift, and go to state 19

    $default  reduce using rule 84 (DECLARATION_SPECIFIERS)

    STORAGE_CLASS_SPECIFIER    转到状态 21
    DECLARATION_SPECIFIERS     转到状态 35
    TYPE_SPECIFIER             转到状态 24
    STRUCT_OR_UNION_SPECIFIER  转到状态 25
    STRUCT_OR_UNION            转到状态 26
    ENUM_SPECIFIER             转到状态 27
    TYPE_QUALIFIER             转到状态 28


State 22

  208 EXTERNAL_DECLARATION: DECLARATION .

    $default  reduce using rule 208 (EXTERNAL_DECLARATION)


State 23

   82 DECLARATION: DECLARATION_SPECIFIERS . T_SEMICOLON
   83            | DECLARATION_SPECIFIERS . INIT_DECLARATOR_LIST T_SEMICOLON
  209 FUNCTION_DEFINITION: DECLARATION_SPECIFIERS . DECLARATOR COMPOUND_STATEMENT

    T_IDENTIFIER       shift, and go to state 36
    T_TIMES            shift, and go to state 37
    T_SEMICOLON        shift, and go to state 38
    T_L_ROUND_BRACKET  shift, and go to state 39

    INIT_DECLARATOR_LIST  转到状态 40
    INIT_DECLARATOR       转到状态 41
    DECLARATOR            转到状态 42
    DIRECT_DECLARATOR     转到状态 43
    POINTER               转到状态 44


State 24

   86 DECLARATION_SPECIFIERS: TYPE_SPECIFIER .
   87                       | TYPE_SPECIFIER . DECLARATION_SPECIFIERS
